=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 v1.024 - Under Development

=over

=item *

Added support for hidden stories, based on class definitions.  A
hidden story is one that, by default, does not show up in calls to
C<find()>.  This is useful for auto-generated story lists where some
types of stories shouldn't be listed.  For example, this will be used
immediately by HREF[Krang Sitemap|/addons.html] and 
HREF[Krang RSS|/addons.html], neither of which should show in most lists.  See
L<Krang::ElementClass::TopLevel> and L<Krang::Story> for more
information.  [Peter]

=item *

Upgraded L<IPC::Run> to 0.78, which is now pseudohash-free (later
versions of Perl complain). [Peter]

=item *

Moved htdocs/help/history.html to htdocs/help/log.html to correct links.
[Perrin]

=item *

Updated L<Imager> to 0.43. [Peter]

=item *

Updated L<HTTP::BrowserDetect> to the latest version, 0.98. [Peter]

=item *

Limited the directories being searched by C<bin/krang_install> when
looking to change execute permissions on a newly-installed backup
file.  There was no need to search a number of potentially large
directory trees, this should improve installation times. [Peter]


=item *

Added C<< published => 1 >> argument to L<Krang::Media> C<find()>
method.  Limits returning objects to those that have been published
before.

=back

=head2 v1.023 - August 31, 2004

=over

=item *

Fixed filenaming in C<krang_backup> to use the correct 2-digit month
(old month values were 00-11, not 01-12). [Peter]

=item *

Fixed a bug in L<Krang::Media> where thumbnails of certain images were
causing segfaults.  [Peter]

=item *

Fixed L<Krang::Story>->C<preview_urls()> to return the correct preview
URL for all sites when a story is associated with multiple sites.
[Peter]


=item *

Made L<Krang::Publisher>->C<additional_content_block()> a lot easier
to use from the developer perspective.  Rather than handling the